--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.0",
     "@editorjs/table": "^2.2.2",
     "@types/editorjs__header": "^2.6.0",
+    "bmx-toast": "^2.0.7",
     "codex-notifier": "^1.1.2",
     "codex-tooltip": "^1.0.5",
     "rxjs": "~7.8.0",
