--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@editorjs/image": "^2.9.0",
     "@editorjs/nested-list": "^1.4.2",
     "@editorjs/table": "^2.2.2",
     "@types/editorjs__header": "^2.6.0",
